// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatches location-aware action, changes address bar + document.title 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/",
  "payload": Object {},
  "prev": Object {
    "kind": "",
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "@@redux-first-router/NOT_FOUND": Object {},
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`dispatches location-aware action, changes address bar + document.title 2`] = `
Object {
  "kind": "push",
  "meta": Object {
    "location": Object {
      "current": Object {
        "kind": "push",
        "pathname": "/second/bar",
        "payload": Object {
          "param": "bar",
        },
        "type": "SECOND",
      },
      "history": undefined,
      "kind": "push",
      "prev": Object {
        "kind": "load",
        "pathname": "/",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
    },
  },
  "payload": Object {
    "param": "bar",
  },
  "type": "SECOND",
}
`;

exports[`dispatches location-aware action, changes address bar + document.title 3`] = `
Object {
  "location": Object {
    "hasSSR": undefined,
    "history": undefined,
    "kind": "push",
    "pathname": "/second/bar",
    "payload": Object {
      "param": "bar",
    },
    "prev": Object {
      "kind": "load",
      "pathname": "/",
      "payload": Object {},
      "type": "@@redux-first-router/NOT_FOUND",
    },
    "routesMap": Object {
      "@@redux-first-router/NOT_FOUND": Object {},
      "FIRST": "/first",
      "SECOND": "/second/:param",
      "THIRD": "/third",
    },
    "type": "SECOND",
  },
  "title": "SECOND",
}
`;

exports[`dont double dispatch the same action 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/second/bar",
  "payload": Object {
    "param": "bar",
  },
  "prev": Object {
    "kind": "",
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "@@redux-first-router/NOT_FOUND": Object {},
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "SECOND",
}
`;

exports[`user dispatches NOT_FOUND and middleware adds missing info to action 1`] = `
Object {
  "kind": "load",
  "meta": Object {
    "location": Object {
      "current": Object {
        "kind": "load",
        "pathname": "/first",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": "load",
      "prev": Object {
        "kind": "load",
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`user dispatches NOT_FOUND redirect and middleware adds missing info to action 1`] = `
Object {
  "kind": "redirect",
  "meta": Object {
    "location": Object {
      "current": Object {
        "kind": "redirect",
        "pathname": "/not-found",
        "payload": Object {},
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": "redirect",
      "prev": Object {
        "kind": "load",
        "pathname": "/first",
        "payload": Object {},
        "type": "FIRST",
      },
    },
  },
  "payload": Object {},
  "type": "@@redux-first-router/NOT_FOUND",
}
`;
